# pyright-rs

./: Cargo.toml  Cargo.toml.backup
crates/add-noqa/: Cargo.toml
crates/add-noqa/src/: add_noqa.rs  main.rs
crates/pyright/: Cargo.toml
crates/pyright/src/: lib.rs
tests/data/: no_pyright_comment.py  no_violations.py  output.json  with_different_pyright_comment.py  with_pyright_comment.py
