[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
repository = "https://github.com/vpoverennov/pyright-rs"
authors = ["Vasiliy Poverennov <vasiliy@poverennov.com>"]
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = { version = "1.0.116" }
